--- a/Valentine's Day Card.html
+++ b/Valentine's Day Card.html
@@ -22,7 +22,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #fff, #ffe6f2);
+      background: rgba(0, 0, 0, 0.6);
       /* Option for a custom pattern:
       background: #fff url('https://your-pattern-url.com/pattern.png') repeat;
       */
