--- a/Valentine's Day Card.html
+++ b/Valentine's Day Card.html
@@ -163,7 +163,7 @@
     // "Yes" button: Prevent flip and redirect.
     yesButton.addEventListener('click', function(e) {
       e.stopPropagation();
-      window.location.href = "FADSSSSS"; // Replace with your URL.
+      window.location.href = "https://www.fredastaire.com/delray-beach/valentines-day/"; // Replace with your URL.
     });
     
     // "No" button: On hover, reposition randomly within the back face.
